tests/errors/lex_int1.java
public class lex_int1 {
	public static int a = 2147483647;
	public static int b = -2147483647;
	public static int c = 21474836470;
}
